--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/node": "^16.11.31",
         "@types/react": "^18.0.8",
         "@types/react-dom": "^18.0.0",
+        "framer-motion": "^6.3.3",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
