--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@fortawesome/free-brands-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.1.18",
+        "@mui/icons-material": "^5.8.2",
+        "@mui/material": "^5.8.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,7 @@
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-https-redirect": "^1.1.0",
+        "react-material-ui-carousel": "^3.4.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "sass": "^1.51.0",
